# npp-rl

./: .env  .gitignore  ACTION_LOGGING_SUMMARY.md  ANALYSIS_README.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_CLEANUP_NOTES.md  ARCHITECTURE_VALIDATION_REPORT.md  AUDIT_COMPLETE.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_SUMMARY.md  BC_HIERARCHICAL_PPO_ANALYSIS.md  BC_LOADING_FIX_COMPREHENSIVE_ANALYSIS.md  BC_PRETRAINING_VALIDATION_REPORT.md  BUGS_FIXED.md  CHANGES_SUMMARY.md  CODE_REVIEW.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_SUMMARY.md  CODE_REVIEW_TASK_3_1.md  COMPLETENESS_REVIEW.md  COMPLETENESS_REVIEW_SUMMARY.md  COMPREHENSIVE_ANALYSIS_AND_RECOMMENDATIONS.md  COMPREHENSIVE_RL_ANALYSIS.md  COMPREHENSIVE_TRAINING_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  CURRICULUM_DATA_FLOW_ANALYSIS.md  CURRICULUM_FEATURES.txt  CURRICULUM_FIXES.md  CURRICULUM_IMPLEMENTATION_SUMMARY.md  CURRICULUM_MULTI_ENV_FIX.md  DEBUGGING_MASKED_ACTION_BUG.md  DIMENSION_FIXES.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_ANALYSIS_SUMMARY.md  FINAL_PARAMETER_REVIEW.md  FINAL_SUMMARY.md  FRAME_STACKING_IMPLEMENTATION_SUMMARY.md  (+114 more)
.openhands/: TASKS.md  setup.sh
agent_eval_data/: README.md  hyperparameters.json  results.json
agents/: cartpole_a2c.py  cartpole_ppo.py  level_agent.py  level_select_agent.py  npp_agent.py  npp_agent_a2c.py  npp_agent_ppo.py  ppo_training_callback.py  space_to_proceed_agent.py
analysis_output/: summary_report.json
archive/: README.md  benchmark_ppo.py  multimodal.py  npp_agent_ppo.py  npp_agent_recurrent_ppo.py  record_best_models.py  util.py
cartpole_test/: cartpole.py
configs/: improved_training_config.json  mlp_with_icm_example.json  path_predictor_training.yaml
datasets/: quality_report.json  replay_data_schema.md
docs/: ACTION_LOGGING_IMPROVEMENTS.md  ARCHITECTURE_COMPARISON_GUIDE.md  ARCHITECTURE_GUIDE.md  COMPREHENSIVE_RL_ANALYSIS.md  CURRICULUM_LEARNING.md  ENHANCED_LOGGING_AND_VISUALIZATION.md  FRAME_SKIP.md  FRAME_STACKING_BC_TODO.md  FRAME_STACKING_PRETRAINING_VALIDATION.md  GRAYSCALE_SINGLE_FRAME_MIGRATION.md  HYPERPARAMETER_RECOMMENDATIONS.md  ICM_INTEGRATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_README.md  LEARNING_EFFECTIVENESS_ANALYSIS.md  MLP_BASELINE_LOW_SUCCESS_RATE_ANALYSIS.md  OBSERVATION_SPACE_GUIDE.md  REWARD_INTEGRATION.md  (+35 more)
(+689 files in other folders)
