[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npp-rl"
version = "0.1.0"
description = "Reinforcement learning for N++ using PPO and graph neural networks"
readme = "README.md"
requires-python = ">=3.11.2"
license = {text = "MIT"}
authors = [
    {name = "NPP-RL contributors"}
]
keywords = ["reinforcement-learning", "n++", "graph-neural-networks", "gnn", "ppo", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",  # NumPy 1.x for compatibility with system packages
    # PyTorch with CUDA support - see README for ARM64/aarch64 installation
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "torch_geometric>=2.3.0",
    # torch-scatter requires PyTorch version-specific wheels from PyG
    # Install via: pip install torch-scatter -f https://data.pyg.org/whl/torch-{VERSION}+{CUDA}.html
    # See environment.sh install_torch_scatter() for automatic installation
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "gymnasium>=1.0.0",
    "sb3-contrib>=2.0.0",
    "stable-baselines3>=2.7.0",
    "optuna>=3.3.0",
    "tensorboard>=2.14.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.8",
    "albumentations>=2.0.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "ruff>=0.13.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=3.0.0",
]

[project.urls]
Repository = "https://github.com/Tetramputechture/npp-rl"

[tool.setuptools.packages.find]
include = ["npp_rl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

